--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -1,129 +1,7 @@
 {
-    "Add Category": "أضافة صنف",
     "Upload Image": "تحميل صورة",
-    "Category Name": "اسم الصنف",
-    "Add Category Name": "أدخل اسم الصنف",
-    "Add Item": "أضافة منتج",
-    "Add Item Name": "أدخل اسم المنتج",
-    "Item Name": "اسم المنتج",
-    "Add Item Unit": "أدخل وحده المنتج ",
-    "Item Unit": " وحده المنتج ",
-    "Choose your Category": "أختار الصنف ",
-    "Has Stock": "لديه مخزون",
     "yes": "نعم",
     "no": "لا",
-    "Alert Number": "رقم التنبيه",
-    "Price": "السعر",
-    "Cost": "التكلفه",
-    "Explore The Menu": "استكشف القائمة",
-    "Categories": "الاصناف",
-    "All Categories": " كل الاصناف",
-    "All Items": "كل المنتجات",
-    "Add  new Item": "اضافه منتج جديد",
-    "Add new Category": "اضافه صنف جديد",
-    "Welcome": "لوحه التحكم",
-    "Items": "المنتجات",
-    "Current Stock": "المخزون الحالي",
-    "Add Current Stock": "ادخل المخزون الحالي",
-    "Add Alert Number": "ادخل رقم التنبيه ",
-    "Add Price": "ادخل السعر ",
-    "Add Cost": "ادخل التكلفه",
-    "Category Image": "صورة الصنف",
-    "Edit Category": "تعديل الصنف",
-    "Edit Item": "تعديل المنتج",
-    "Orders": "الطلبيات",
-    "All Orders": "جميع الطلبيات",
-    "Order Id": "رقم الطلب",
-    "Customer Name": "أسم العميل",
-    "Date Created": "تاريخ الانشاء",
-    "Status": "الحالة",
-    "Total": "الصافي",
-    "Settings": "الأعدادات",
-    "Pending": "انتظار",
-    "Guest": "زائر",
-    "Quantity": "الكمية",
-    "Order Details": "تفاصيل الطلب",
-    "Edit Order": "تعديل الطلب",
-    "Main Stock": "المخزن الرئيسي",
-    "Stock": "المخزن",
-    "Available Stock": "المخزون المتاح",
-    "Cancel": "الغاء",
-    "Transfer": "تحويل",
-    "Execute": "تنفيذ",
-    "Execute An Operation": "تنفيذ عملية",
-    "Coupon": "كوبون",
-    "All Coupons": "الكوبونات",
-    "Add  New Coupon": "اضافه كوبون جديد",
-    "Add Coupon": "اضافه كوبون",
-    "Coupon Name": "اسم الكوبون",
-    "Coupon Code": "كود الكوبون",
-    "Add coupon Name": "ادخل اسم الكوبون",
-    "Add coupon Code": "ادخل كود الكوبون",
-    "Add Value": "ادخل القيمه",
-    "Value": "القيمه",
-    "Choose Your Type": "اختار النوع",
-    "Coupon Type": "نوع الكوبون",
-    "Choose Your Status": " اختار الحاله",
-    "coupon status": "حاله الكوبون",
-    "coupon date": "وقت الكوبون",
-    "Submit": "ادخال",
-    "Fixed": "ثابت",
-    "Percentage": "نسبه مئويه",
-    "Active": "صالح",
-    "Used": "مستخدم",
-    "Expired": "منتهي الصلاحيه",
-    "Disabled": "غير فعال",
-    "Edit": "تعديل",
-    "Discount": "الخصم",
-    "Update Order Status": "تغيير حالة الطلب",
-    "Choose order status": "أختيار حالة الطلب",
-    "Order Status": "حالة الطلب",
-    "Processing": "جارى التنفيذ",
-    "Ready": "جاهز",
-    "Completed": "اكتمل",
-    "Subtotal": "الإجمالي",
-    "Time Created": "وقت الانشاء",
-    "Back": "رجوع",
-    "Add Quantity": "ادخل الكمية",
-    "Change Image": "تغير الصوره",
-    "Packing Unit": "وحدة التعبئة",
-    "Enter Packing Unit Name": " ادخل وحدة التعبئة ",
-    "Packing Unit Name": "اسم وحدة التعبئة",
-    "Packing Units": "وحدات التعبئة",
-    "Add New": "اضافة",
-    "Add Packing Unit": "ادخل وحدة تعبئة",
-    "The Menu": "المنيو",
-    "Menu Items": "عناصر المنيو",
-    "Add Menu Item": "أضافة عنصر جديد",
-    "Item Image": "صورة المنتج",
-    "Item Category": "فئة المنتج",
-    "Item Price": "سعر المنتج",
-    "Choose a packing unit": "أختار وحدة تعبئة",
-    "Select": "أختار",
-    "Notes": "ملاحظات",
-    "Done": "اكتمل",
-    "Hide": "أخفاء",
-    "Payment": "حساب",
-    "Execution Start": "بدء التنفيذ",
-    "Item created successfully!": "تم إنشاء العنصر بنجاح!",
-    "Category updated successfully!": "تم تحديث الفئة بنجاح!",
-    "category deleted successfully": "تم حذف الفئة بنجاح",
-    "The status field is required.": "حقل الحالة مطلوب.",
-    "Order  status update successfully": "طلب تحديث حالة بنجاح",
-    "Item updated successfully": "تم تحديث العنصر بنجاح",
-    "item deleted successfully": "تم حذف العنصر بنجاح",
-    "Quantity transfered successfully.": "تم نقل الكمية بنجاح.",
-    "The selected quantity exceeds quantity available in stock.": "الكمية المحددة تتجاوز الكمية المتاحة في المخزون.",
-    "Quantity added successfully.": "تم إضافة الكمية بنجاح.",
-    "Quantity reduced successfully.": "تم تخفيض الكمية بنجاح.",
-    "The selected operation is not valid.": "العملية المحددة غير صالحة.",
-    "We have successfully updated your order.": "لقد نجحنا في تحديث طلبك",
-    "Order has been updated": "تم تحديث الطلب",
-    "We have successfully received your order.": "لقد تلقينا طلبك بنجاح",
-    "You have a new order": "لديك طلب جديد",
-    "Coupon code is no longer valid.": "لم يعد كود الكوبون صالحًا",
-    "Coupon code doesn\"t exist.": "رقم الكوبون غير موجود",
-    "In progress": "جارى التنفيذ",
     "Users":"المستخدمون",
     "Add New User":"اضافة مستخدم",
     "Name":"الاسم",
@@ -139,28 +17,17 @@
     "Role Name":"اسم الدور",
     "Add Role Name":"اضف اسم الدور",
     "Edit Role":"تعديل الدور",
-    "coupon created successfully": "تم انشاء الكوبون بنجاح",
-    "coupon updated successfully": "تم تحديث الكوبون بنجاح",
-    "Ingredient Created succesfully": "تم انشاء المكون بنجاح",
-    "Ingredient deleted successfully": "تم حذف المكون بنجاح",
-    "Packing unit created successfully!": "تم إنشاء وحدة التعبئة بنجاح",
-    "Packing unit updated successfully!": "تم تحديث وحدة التعبئة بنجاح",
-    "packing Unit deleted successfully": "تم حذف وحدة التعبئة بنجاح",
+
     "User created successfully": "تم إنشاء المستخدم بنجاح",
     "User deleted successfully": "تم حذف المستخدم بنجاح",
     "Role created succesfully": "تم إنشاء الدور بنجاح",
     "Role updated successfully": "تم تحديث الدور بنجاح",
     "Role deleted successfully": "تم حذف الدور بنجاح",
     "Setting Done": "تم تغيير الاعدادات بنجاح",
-    "Table Number": "رقم التربيزه",
-    "Time Updated": "وقت التحديث ",
+
 
     "Order Log": "سجل الطلب",
-    "Last Update": "اخر تحديث",
-    "Company name": "اسم الشركه",
-    "Company logo": "شعار الشركه",
-    "Company Phone": "تليفون الشركه",
-    "Defualt TAX": "الضريبه الافتراضيه",
+
     "Logout": "تسجيل الخروج",
     "Remember Me": "تذكرني",
     "Login": "تسجيل الدخول",
@@ -170,16 +37,57 @@
     "A fresh verification link has been sent to your email address.": "تم إرسال رابط تحقق جديد إلى عنوان بريدك الإلكتروني",
     "Before proceeding, please check your email for a verification link.": "قبل المتابعة ، يرجى التحقق من بريدك الإلكتروني لمعرفة رابط التحقق.",
     "If you did not receive the email": "إذا لم تتلقى البريد الإلكتروني",
-    "click here to request another":"انقر هنا للارسال مره اخري",
-    "Call You":"ينادي عليك",
-    "Call Parista": "الباريستا",
-    "Call Captain": "الكابتن",
-    "Call Cashier": " الكاشير",
-    "parista":"الباريستا",
-    "cashier":"الكاشير",
-    "Add New Order":"اضافه طلب جديد",
-    "captain":"الكابتن",
-    "Coupon Date": "وقت الكوبون"
-   
+    "All Cites" : " كل المدن",
+    "Cities":"المدن",
+    "City Id":"رقم المدينة",
+    "City Name":"اسم المدينة",
+    "Settings":"الاعدادات",
+    "Add City Name":"اضف اسم المدينة",
+    "Add City":"اضافة مدينة",
+    "Edit City":"تعديل اسم المدينة",
+    "Submit":"ادخال",
+    "Back":"الرجوع",
+    "Offices":"المكاتب",
+    "All Offices":"كل المكاتب",
+    "Office Id":"رقم المكتب",
+    "Office Name":"اسم المكتب",
+    "Office Address":"عنوان المكتب",
+    "Office Phone":"تليفون المكتب",
+    "Office Mobile":"هاتف المكتب",
+
+    "Office Email":"الايميل الالكتروني",
+    "Add Office":"اضافة مكتب",
+    "Add Office Name":"اضف اسم المكتب",
+    "Add Office Address":"اضف عنوان المكتب",
+    "Add Office Phone":"اضف تليفون المكتب",
+    "Add Office Mobile":"اضف هاتف المكتب",
+    "Add Office Email":"اضف الايميل الالكتروني",
+    "Choose City":"اختر المدينة",
+    "Edit Office":"تعديل المكتب",
+    "Add New Service":"اضافة خدمة جديدة",
+    "Add New Office":"اضافة مكتب جديد",
+    "All Services":"كل الخدمات",
+    "Services" : " الخدمات",
+    "Add Service":"اضافة خدمة",
+    "Add Service Name":"اضف اسم الخدمة",
+    "Add Service price":"اضف سعر الخدمة",
+    "Add Service Time":"اضف وقت الخدمة",
+    "Service Name":"اسم الخدمة",
+    "Service Price":"سعر الخدمة",
+    "Service Time":"وقت الخدمة",
+    "Requirements":"الملفات المطلوبة",
+    "Requirement Name":"اسم الملف المطلوب",
+    "Requirement Description":"وصف الملف",
+    "Requirement Type":"نوع الملف",
+    "Add Requirement Name":"اضف اسم الملف",
+    "Add Requirement Description":"اضف وصف الملف",
+    "Choose Requirement Type":"اختر نوع الملف"
+
+
+
+
+
+
+
 
 }
