add 2 icons in office related to admins and employees

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -92,7 +92,8 @@
     "Service created successfully":"تم اضافة الخدمة بنجاح",
     "Service updated successfully":"تم تعديل الخدمة بنجاح",
     "Service removed successfully":"تم حذف الخدمة بنجاح",
-    "Edit Service":"تعديل الخدمة"
+    "Edit Service":"تعديل الخدمة",
+    "Edit User":"تعديل بيانات المستخدم"
 
 
 
