change admin menu

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -2,32 +2,28 @@
     "Upload Image": "تحميل صورة",
     "yes": "نعم",
     "no": "لا",
-    "Users":"المستخدمون",
-    "Add New User":"اضافة مستخدم",
-    "Name":"الاسم",
-    "E-Mail Address":"الايميل",
-    "Password":"رقم السري",
-    "Confirm Password":"تأكيد الرقم السري",
-    "Choose Role":"اختر الدور",
-    "Add":"اضافه",
-    "Roles":"الأدوار",
-    "ADD NEW":"اضافه",
-    "Add Role":"اضافه دور",
-    "Add New Role":"اضافه دور جديد",
-    "Role Name":"اسم الدور",
-    "Add Role Name":"اضف اسم الدور",
-    "Edit Role":"تعديل الدور",
-
+    "Users": "المستخدمون",
+    "Add New User": "اضافة مستخدم",
+    "Name": "الاسم",
+    "E-Mail Address": "الايميل",
+    "Password": "رقم السري",
+    "Confirm Password": "تأكيد الرقم السري",
+    "Choose Role": "اختر الدور",
+    "Add": "اضافه",
+    "Roles": "الأدوار",
+    "ADD NEW": "اضافه",
+    "Add Role": "اضافه دور",
+    "Add New Role": "اضافه دور جديد",
+    "Role Name": "اسم الدور",
+    "Add Role Name": "اضف اسم الدور",
+    "Edit Role": "تعديل الدور",
     "User created successfully": "تم إنشاء المستخدم بنجاح",
     "User deleted successfully": "تم حذف المستخدم بنجاح",
     "Role created succesfully": "تم إنشاء الدور بنجاح",
     "Role updated successfully": "تم تحديث الدور بنجاح",
     "Role deleted successfully": "تم حذف الدور بنجاح",
     "Setting Done": "تم تغيير الاعدادات بنجاح",
-
-
     "Order Log": "سجل الطلب",
-
     "Logout": "تسجيل الخروج",
     "Remember Me": "تذكرني",
     "Login": "تسجيل الدخول",
@@ -37,79 +33,74 @@
     "A fresh verification link has been sent to your email address.": "تم إرسال رابط تحقق جديد إلى عنوان بريدك الإلكتروني",
     "Before proceeding, please check your email for a verification link.": "قبل المتابعة ، يرجى التحقق من بريدك الإلكتروني لمعرفة رابط التحقق.",
     "If you did not receive the email": "إذا لم تتلقى البريد الإلكتروني",
-    "All Cites" : " كل المدن",
-    "Cities":"المدن",
-    "City Id":"رقم المدينة",
-    "City Name":"اسم المدينة",
-    "Settings":"الاعدادات",
-    "Add City Name":"اضف اسم المدينة",
-    "Add City":"اضافة مدينة",
-    "Edit City":"تعديل اسم المدينة",
-    "Submit":"ادخال",
-    "Back":"الرجوع",
-    "Offices":"المكاتب",
-    "All Offices":"كل المكاتب",
-    "Office Id":"رقم المكتب",
-    "Office Name":"اسم المكتب",
-    "Office Address":"عنوان المكتب",
-    "Office Phone":"تليفون المكتب",
-    "Office Mobile":"هاتف المكتب",
-
-    "Office Email":"الايميل الالكتروني",
-    "Add Office":"اضافة مكتب",
-    "Add Office Name":"اضف اسم المكتب",
-    "Add Office Address":"اضف عنوان المكتب",
-    "Add Office Phone":"اضف تليفون المكتب",
-    "Add Office Mobile":"اضف هاتف المكتب",
-    "Add Office Email":"اضف الايميل الالكتروني",
-    "Choose City":"اختر المدينة",
-    "Edit Office":"تعديل المكتب",
-    "Add New Service":"اضافة خدمة جديدة",
-    "Add New Office":"اضافة مكتب جديد",
-    "All Services":"كل الخدمات",
-    "Services" : " الخدمات",
-    "Add Service":"اضافة خدمة",
-    "Add Service Name":"اضف اسم الخدمة",
-    "Add Service price":"اضف سعر الخدمة",
-    "Add Service Time":"اضف وقت الخدمة",
-    "Service Name":"اسم الخدمة",
-    "Service Price":"سعر الخدمة",
-    "Service Time":"وقت الخدمة",
-    "Requirements":"الملفات المطلوبة",
-    "Requirement Name":"اسم الملف المطلوب",
-    "Requirement Description":"وصف الملف",
-    "Requirement Type":"نوع الملف",
-    "Add Requirement Name":"اضف اسم الملف",
-    "Add Requirement Description":"اضف وصف الملف",
-    "Choose Requirement Type":"اختر نوع الملف",
-    "Add New City":"اضف اسم المدينة",
-    "City created succesfully":"تم اضافة المدينة بنجاح",
-    "City updated successfully":"تم تعديل اسم المدينة بنجاح",
-    "City removed successfully":"تم حذف المدينة بنجاح",
-    "Office added successfully":"تم اضافة المكتب بنجاح",
-    "Office updated successfully":"تم تعديل المكتب بنجاح",
-    "Office removed successfully":"تم حذف المكتب بنجاح",
-    "Service created successfully":"تم اضافة الخدمة بنجاح",
-    "Service updated successfully":"تم تعديل الخدمة بنجاح",
-    "Service removed successfully":"تم حذف الخدمة بنجاح",
-    "Edit Service":"تعديل الخدمة",
-    "Edit User":"تعديل بيانات المستخدم",
-    "Welcome":"الرئيسية",
-    "Admin":"المدير",
-    "Change Admin":"تغيير المدير",
-    "Choose New Admin":"اختر مدير جديد",
-    "Change":"تغيير",
-    "Service Descrption":"وصف الخدمة",
-    "Service Cancelation Time":"الوقت المسموح لإلغاء الخدمة",
-    "Service Allowed Cancel Time":" الوقت المسموح لإلغاء الخدمة",
-    "Add Service Description":"اضف وصف الخدمة",
-    "Add Service  Cancel Time":"اضف الوقت المسموح لالغاء الخدمة"
-
-
-
-
-
-
-
-
+    "All Cites": " كل المدن",
+    "Cities": "المدن",
+    "City Id": "رقم المدينة",
+    "City Name": "اسم المدينة",
+    "Settings": "الاعدادات",
+    "Add City Name": "اضف اسم المدينة",
+    "Add City": "اضافة مدينة",
+    "Edit City": "تعديل اسم المدينة",
+    "Submit": "ادخال",
+    "Back": "الرجوع",
+    "Offices": "المكاتب",
+    "All Offices": "كل المكاتب",
+    "Office Id": "رقم المكتب",
+    "Office Name": "اسم المكتب",
+    "Office Address": "عنوان المكتب",
+    "Office Phone": "تليفون المكتب",
+    "Office Mobile": "هاتف المكتب",
+    "Office Email": "الايميل الالكتروني",
+    "Add Office": "اضافة مكتب",
+    "Add Office Name": "اضف اسم المكتب",
+    "Add Office Address": "اضف عنوان المكتب",
+    "Add Office Phone": "اضف تليفون المكتب",
+    "Add Office Mobile": "اضف هاتف المكتب",
+    "Add Office Email": "اضف الايميل الالكتروني",
+    "Choose City": "اختر المدينة",
+    "Edit Office": "تعديل المكتب",
+    "Add New Service": "اضافة خدمة جديدة",
+    "Add New Office": "اضافة مكتب جديد",
+    "All Services": "كل الخدمات",
+    "Services": " الخدمات",
+    "Add Service": "اضافة خدمة",
+    "Add Service Name": "اضف اسم الخدمة",
+    "Add Service price": "اضف سعر الخدمة",
+    "Add Service Time": "اضف وقت الخدمة",
+    "Service Name": "اسم الخدمة",
+    "Service Price": "سعر الخدمة",
+    "Service Time": "وقت الخدمة",
+    "Requirements": "الملفات المطلوبة",
+    "Requirement Name": "اسم الملف المطلوب",
+    "Requirement Description": "وصف الملف",
+    "Requirement Type": "نوع الملف",
+    "Add Requirement Name": "اضف اسم الملف",
+    "Add Requirement Description": "اضف وصف الملف",
+    "Choose Requirement Type": "اختر نوع الملف",
+    "Add New City": "اضف اسم المدينة",
+    "City created succesfully": "تم اضافة المدينة بنجاح",
+    "City updated successfully": "تم تعديل اسم المدينة بنجاح",
+    "City removed successfully": "تم حذف المدينة بنجاح",
+    "Office added successfully": "تم اضافة المكتب بنجاح",
+    "Office updated successfully": "تم تعديل المكتب بنجاح",
+    "Office removed successfully": "تم حذف المكتب بنجاح",
+    "Service created successfully": "تم اضافة الخدمة بنجاح",
+    "Service updated successfully": "تم تعديل الخدمة بنجاح",
+    "Service removed successfully": "تم حذف الخدمة بنجاح",
+    "Edit Service": "تعديل الخدمة",
+    "Edit User": "تعديل بيانات المستخدم",
+    "Welcome": "الرئيسية",
+    "Admin": "المدير",
+    "Change Admin": "تغيير المدير",
+    "Choose New Admin": "اختر مدير جديد",
+    "Change": "تغيير",
+    "Service Descrption": "وصف الخدمة",
+    "Service Cancelation Time": "الوقت المسموح لإلغاء الخدمة",
+    "Service Allowed Cancel Time": " الوقت المسموح لإلغاء الخدمة",
+    "Add Service Description": "اضف وصف الخدمة",
+    "Add Service  Cancel Time": "اضف الوقت المسموح لالغاء الخدمة",
+    "Working Days": "أيام العمل",
+    "Show All": "عرض الجميع",
+    "Add New": "أضافة",
+    "Main": "الرئيسية"
 }
