add new work day page

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -111,13 +111,8 @@
     "Working Days": "أيام العمل",
     "Show All": "عرض الجميع",
     "Add New": "أضافة",
-    "Main": "الرئيسية"
-
-
-
-
-
-
-
-
+    "Main": "الرئيسية",
+    "Date": "التاريخ",
+    "Add New Work Day": "أضافة يوم عمل جديد",
+    "Select Date": "أختار تاريخ"
 }
