--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -126,5 +126,6 @@
     "Start Time": "وقت البداية",
     "End Time": "وقت النهاية",
     "Edit Schedule": "تعديل موعد عمل",
-    "Schedule updated successfully": "تم تعديل الموعد بنجاح"
+    "Schedule updated successfully": "تم تعديل الموعد بنجاح",
+    "Choose Office":"اختر الفرع"
 }
