fix add service

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -66,11 +66,11 @@
     "Services": " الخدمات",
     "Add Service": "اضافة خدمة",
     "Add Service Name": "اضف اسم الخدمة",
-    "Add Service price": "اضف سعر الخدمة",
-    "Add Service Time": "اضف وقت الخدمة",
+    "Add Service price":"اضف سعر الخدمة بالجنية",
+    "Add Service Time": "اضف وقت الخدمة بالدقيقة",
     "Service Name": "اسم الخدمة",
-    "Service Price": "سعر الخدمة",
-    "Service Time": "وقت الخدمة",
+    "Service Price": "سعر الخدمة بالجنية",
+    "Service Time": "وقت الخدمة بالدقيقة",
     "Requirements": "الملفات المطلوبة",
     "Requirement Name": "اسم الملف المطلوب",
     "Requirement Description": "وصف الملف",
@@ -96,8 +96,8 @@
     "Choose New Admin": "اختر مدير جديد",
     "Change": "تغيير",
     "Service Descrption": "وصف الخدمة",
-    "Service Cancelation Time": "الوقت المسموح لإلغاء الخدمة",
-    "Service Allowed Cancel Time": " الوقت المسموح لإلغاء الخدمة",
+    "Service Cancelation Time": "الوقت المسموح لإلغاء الخدمة بالايام",
+    "Service Allowed Cancel Time": " الوقت المسموح لإلغاء الخدمة بالايام",
     "Add Service Description": "اضف وصف الخدمة",
     "Add Service  Cancel Time": "اضف الوقت المسموح لالغاء الخدمة",
     "Office Settings": "اعدادت الفرع",
