fix small issues

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -8,20 +8,20 @@
     "E-Mail Address": "الايميل",
     "Password": "رقم السري",
     "Confirm Password": "تأكيد الرقم السري",
-    "Choose Role": "اختر الدور",
+    "Choose Role": "اختر الصلاحية",
     "Add": "اضافه",
-    "Roles": "الأدوار",
+    "Roles": "الصلاحيات",
     "ADD NEW": "اضافه",
-    "Add Role": "اضافه دور",
-    "Add New Role": "اضافه دور جديد",
-    "Role Name": "اسم الدور",
-    "Add Role Name": "اضف اسم الدور",
-    "Edit Role": "تعديل الدور",
+    "Add Role": "اضافه صلاحية",
+    "Add New Role": "اضافه صلاحية جديد",
+    "Role Name": "اسم الصلاحية",
+    "Add Role Name": "اضف اسم الصلاحية",
+    "Edit Role": "تعديل الصلاحية",
     "User created successfully": "تم إنشاء المستخدم بنجاح",
     "User deleted successfully": "تم حذف المستخدم بنجاح",
-    "Role created succesfully": "تم إنشاء الدور بنجاح",
-    "Role updated successfully": "تم تحديث الدور بنجاح",
-    "Role deleted successfully": "تم حذف الدور بنجاح",
+    "Role created succesfully": "تم إنشاء الصلاحية بنجاح",
+    "Role updated successfully": "تم تحديث الصلاحية بنجاح",
+    "Role deleted successfully": "تم حذف الصلاحية بنجاح",
     "Setting Done": "تم تغيير الاعدادات بنجاح",
     "Order Log": "سجل الطلب",
     "Logout": "تسجيل الخروج",
