--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -134,5 +134,8 @@
     "Options": "الخيارات",
     "User": "العميل",
     "Feedback": "التقييم",
-    "Offices Tickets": "طلبات المكاتب"
+    "Offices Tickets": "طلبات المكاتب",
+    "Ticket not found": "الطلب غير مسجل",
+    "Ticket cancelled": "تم الغاء الطلب",
+    "Ticket max allowed cancellation period reached": "تم تخطى الوقت المسموح لألغاء الخدمة"
 }
