--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -141,5 +141,7 @@
     "Files": "الملفات",
     "Tasks": "المهام",
     "Update Ticket Status": "تحديث حالة الطلب",
-    "Ticket Code": "كود الطلب"
+    "Ticket Code": "كود الطلب",
+    "Reset Password": "استرجاع كلمة المرور",
+    "Send Password Reset Link": "ارسل رابط استرجاع كلمة المرور"
 }
