--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -138,5 +138,6 @@
     "Files":"الملفات",
     "Tasks":"المهام",
     "Update Ticket Status":"تحديث حالة الطلب",
-    "Ticket Code":"كود الطلب"
+    "Ticket Code":"كود الطلب",
+    "Requirement Created succesfully":"تم اضافة المستند بنجاح"
 }
