fix bugs ,history api

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -48,15 +48,15 @@
     "Office Id": "رقم الفرع",
     "Office Name": "اسم الفرع",
     "Office Address": "عنوان الفرع",
-    "Office Phone": "تليفون الفرع",
-    "Office Mobile": "هاتف الفرع",
+    "Office Phone": "الرقم الارضي",
+    "Office Mobile": "رقم الموبيل",
 
     "Office Email": "الايميل الالكتروني",
     "Add Office": "اضافة الفرع",
     "Add Office Name": "اضف اسم الفرع",
     "Add Office Address": "اضف عنوان الفرع",
-    "Add Office Phone": "اضف تليفون الفرع",
-    "Add Office Mobile": "اضف هاتف الفرع",
+    "Add Office Phone": "اضف الرقم الارضي",
+    "Add Office Mobile": "اضف رقم الموبيل",
     "Add Office Email": "اضف الايميل الالكتروني",
     "Choose City": "اختر المدينة",
     "Edit Office": "تعديل الفرع",
@@ -143,11 +143,14 @@
     "Ticket not found": "الطلب غير مسجل",
     "Ticket cancelled": "تم الغاء الطلب",
     "Ticket max allowed cancellation period reached": "تم تخطى الوقت المسموح لألغاء الخدمة",
-    "Files": "الملفات",
-    "Tasks": "المهام",
-    "Update Ticket Status": "تحديث حالة الطلب",
-    "Ticket Code": "كود الطلب",
     "Reset Password": "استرجاع كلمة المرور",
     "Send Password Reset Link": "ارسل رابط استرجاع كلمة المرور",
-    "Mark As Done": "إتمام"
+    "Mark As Done": "إتمام",
+    "resolved":"تم الحل",
+    "waiting-list":"قائمة الانتظار",
+    "pending-payment":"لم يتم الدفع",
+    "rated":"تم التقييم",
+    "on-hold":"معلقة",
+    "cancelled":" تم الالغاء",
+    "in-progress":"جاهزة للتنفيذ"
 }
