add user adjusting

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -152,5 +152,6 @@
     "rated":"تم التقييم",
     "on-hold":"معلقة",
     "cancelled":" تم الالغاء",
-    "in-progress":"جاهزة للتنفيذ"
+    "in-progress":"جاهزة للتنفيذ",
+    "User updated successfully":"تم   تحديث بيانات المستخدم"
 }
